<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/coffeecup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/title"
        android:textSize="36sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/forest"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/rainforestimage"
            android:scaleType="centerCrop"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/rioImage"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/riococobeans"
            tools:ignore="contentDescription" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="24sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:autoLink="map"
            android:text="@string/address"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:autoLink="phone"
            android:text="@string/phone"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/address"
            android:layout_marginEnd="36dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="36dp"
            android:layout_marginStart="0dp"
            android:text="@string/hours"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/phoneNumber"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:autoLink="web"
            android:text="@string/website"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/getcoffee"
            android:textColor="#FFFF"
            android:textSize="16sp" />

    </RelativeLayout>


</LinearLayout>